<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.swardana.nayanika</groupId>
    <artifactId>nayanika</artifactId>
    <version>1.0.0</version>

    <packaging>jar</packaging>

    <name>${project.groupId}:${project.artifactId}</name>
    <description>Nayanika is a picture viewer application</description>
    <inceptionYear>2021</inceptionYear>

    <licenses>
        <license>
            <name>GPL-3.0-or-later</name>
            <url>https://www.gnu.org/licenses/gpl-3.0.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>swardana</id>
            <name>Sukma Wardana</name>
            <email>swardana@tutanota.com</email>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>16</maven.compiler.release>

        <!-- For Maven Exec Plugin -->
        <module.name>com.swardana.nayanika</module.name>
        <class.name>com.swardana.nayanika.NayanikaApp</class.name>

        <!-- For version.properties file -->
        <build.number>${maven.build.timestamp}</build.number>
        <!--
            This converts the build timestamp to a year, month and week information.
            e.g. release at July 28, 2021 then the build number is 217.31.
              - yy: the last two digits of the year
              - M : month in year
              - w : week in year
            Note that Maven generated timestamp is in UTC, not local time. For more information see:
                https://docs.microsoft.com/en-us/windows/win32/msi/productversion
                https://docs.oracle.com/en/java/javase/15/docs/api/java.base/java/text/SimpleDateFormat.html
         -->
        <maven.build.timestamp.format>yyM.w</maven.build.timestamp.format>

        <!--
            Replace this UUID with a custom one for your project. This ID is used by the Windows installer system
            to know that an installer is intended to replace/upgrade an earlier version. The easiest thing to do is
            grab a unique UUID via https://www.uuidgenerator.net
        -->
        <windows.upgrade.uuid>98e98f2c-03fe-49e1-b00d-465568101b60</windows.upgrade.uuid>

        <!-- For MANIFEST.MF -->
        <app.name>com/swardana/nayanika</app.name>
        <app.title>Nayanika</app.title>

        <!-- plugins -->
        <maven.version>3.8.1</maven.version>
        <maven.clean.version>3.1.0</maven.clean.version>
        <maven.compiler.version>3.8.1</maven.compiler.version>
        <maven.install.version>3.0.0-M1</maven.install.version>
        <maven.exec.version>3.0.0</maven.exec.version>
        <maven.resources.version>3.2.0</maven.resources.version>
        <maven.dependency.version>3.1.2</maven.dependency.version>
        <maven.surefire.version>3.0.0-M5</maven.surefire.version>
        <maven.jar.version>3.2.0</maven.jar.version>
        <maven.enforcer.version>3.0.0-M1</maven.enforcer.version>
        <jacoco.version>0.8.6</jacoco.version>
        <maven.checkstyle.version>3.1.2</maven.checkstyle.version>
        <checkstyle.version>8.36</checkstyle.version>

        <!-- test dependencies -->
        <junit.jupiter.version>5.7.1</junit.jupiter.version>
        <junit.jupiter.params.version>5.7.1</junit.jupiter.params.version>
        <assertj.version>3.19.0</assertj.version>
        <mockito.version>3.9.0</mockito.version>

        <!-- dependencies -->
        <jfx.version>16</jfx.version>
        <metroiconfx.version>1.0.0</metroiconfx.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.jupiter.params.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${jfx.version}</version>
        </dependency>
        <dependency>
            <groupId>com.swardana</groupId>
            <artifactId>metroiconfx</artifactId>
            <version>${metroiconfx.version}</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>${maven.clean.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <fork>true</fork>
                    <showWarnings>true</showWarnings>
                    <compilerArgs>
                        <arg>-Xlint:all</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>${maven.install.version}</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>${maven.exec.version}</version>
                <configuration>
                    <executable>java</executable>
                    <arguments>
                        <argument>-Xms64m</argument>
                        <argument>-Xmx256m</argument>
                        <argument>-XX:+UseSerialGC</argument>
                        <argument>--module-path</argument>
                        <modulepath/>
                        <argument>--module</argument>
                        <argument>${module.name}/${class.name}</argument>
                    </arguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${maven.resources.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>${maven.dependency.version}</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/libs</outputDirectory>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>false</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                            <includeScope>compile</includeScope>
                            <includeScope>runtime</includeScope>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven.jar.version}</version>
                <configuration>
                    <finalName>${project.artifactId}-${project.version}</finalName>
                    <archive>
                        <manifestEntries>
                            <Name>${app.name}</Name>
                            <Specification-Title>${app.title}</Specification-Title>
                            <Specification-Version>${project.version}</Specification-Version>
                            <Implementation-Title>${project.artifactId}</Implementation-Title>
                            <Implementation-Version>${project.version}</Implementation-Version>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.version}</version>
                <configuration>
                    <argLine>
                        --add-opens
                        com.swardana.nayanika/com.swardana.nayanika.base=ALL-UNNAMED
                        --add-opens
                        com.swardana.nayanika/com.swardana.nayanika.base.gallery=ALL-UNNAMED
                        --add-opens
                        com.swardana.nayanika/com.swardana.nayanika.base.slideshow=ALL-UNNAMED
                        --add-opens
                        com.swardana.nayanika/com.swardana.nayanika.control=ALL-UNNAMED
                        --add-opens
                        com.swardana.nayanika/com.swardana.nayanika.command=ALL-UNNAMED
                        --add-opens
                        com.swardana.nayanika/com.swardana.nayanika.gui=ALL-UNNAMED
                        --add-opens
                        com.swardana.nayanika/com.swardana.nayanika.gui.about=ALL-UNNAMED
                        --add-opens
                        com.swardana.nayanika/com.swardana.nayanika.gui.frame=ALL-UNNAMED
                        --add-opens
                        com.swardana.nayanika/com.swardana.nayanika.gui.menu=ALL-UNNAMED
                        --add-opens
                        com.swardana.nayanika/com.swardana.nayanika.gui.menu.menubar=ALL-UNNAMED
                        --add-opens
                        com.swardana.nayanika/com.swardana.nayanika.gui.menu.toolbar=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <configuration>
                    <destFile>${project.build.directory}/coverage-reports/jacoco-unit.exec</destFile>
                    <dataFile>${project.build.directory}/coverage-reports/jacoco-unit.exec</dataFile>
                </configuration>
                <executions>
                    <execution>
                        <id>jacoco-initialize</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>jacoco-site</id>
                        <phase>package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven.enforcer.version}</version>
                <executions>
                    <execution>
                        <id>enforce</id>
                        <configuration>
                            <rules>
                                <DependencyConvergence />
                                <requireJavaVersion>
                                    <version>${maven.compiler.release}</version>
                                </requireJavaVersion>
                                <requireMavenVersion>
                                    <version>${maven.version}</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven.checkstyle.version}</version>
                <configuration>
                    <configLocation>checkstyle.xml</configLocation>
                    <suppressionsLocation>suppressions.xml</suppressionsLocation>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                    <encoding>UTF-8</encoding>
                    <consoleOutput>true</consoleOutput>
                    <failsOnError>true</failsOnError>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>${checkstyle.version}</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>unix-active</id>
            <activation>
                <os>
                    <family>unix</family>
                </os>
            </activation>
            <properties>
                <platform>linux</platform>
                <icon.path>${project.basedir}/package/icons/icon.png</icon.path>
                <license.file>${project.basedir}/COPYING</license.file>
                <executable>/bin/sh</executable>
                <argument.1/>
                <argument.2>${project.basedir}/build_app.sh</argument.2>
                <installer.type>rpm</installer.type>
            </properties>
        </profile>
        <profile>
            <id>windows-active</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <properties>
                <platform>windows</platform>
                <icon.path>${project.basedir}\package\icons\icon.ico</icon.path>
                <license.file>${project.basedir}\COPYING</license.file>
                <executable>cmd</executable>
                <argument.1>/C</argument.1>
                <argument.2>${project.basedir}\build_app.bat</argument.2>
                <installer.type>msi</installer.type>
            </properties>
        </profile>
        <profile>
            <id>mac-active</id>
            <activation>
                <os>
                    <family>mac</family>
                </os>
            </activation>
            <properties>
                <platform>macos</platform>
                <icon.path>${project.basedir}/package/icons/icon.icns</icon.path>
                <license.file>${project.basedir}/COPYING</license.file>
                <executable>/bin/sh</executable>
                <argument.1/>
                <argument.2>${project.basedir}/build_app.sh</argument.2>
                <installer.type>dmg</installer.type>
            </properties>
        </profile>
        <profile>
            <id>installer</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>${maven.exec.version}</version>
                        <executions>
                            <execution>
                                <id>build-package</id>
                                <phase>install</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <workingDirectory>${project.basedir}</workingDirectory>
                            <executable>${executable}</executable>
                            <arguments>
                                <argument>${argument.1}</argument>
                                <argument>${argument.2}</argument>
                            </arguments>
                            <environmentVariables>
                                <APP_NAME>${app.title}</APP_NAME>
                                <PROJECT_VERSION>${project.version}</PROJECT_VERSION>
                                <MAIN_MODULE>${module.name}</MAIN_MODULE>
                                <MAIN_CLASS>${class.name}</MAIN_CLASS>
                                <ICON_PATH>${icon.path}</ICON_PATH>
                                <LICENSE_FILE>${project.basedir}/COPYING</LICENSE_FILE>
                                <INSTALLER_TYPE>${installer.type}</INSTALLER_TYPE>
                                <WINDOWS_UUID>${windows.upgrade.uuid}</WINDOWS_UUID>
                                <ARCH>x86_64</ARCH>
                                <OPERATING_SYSTEM>${platform}</OPERATING_SYSTEM>
                                <BUILD_NUMBER>${build.number}</BUILD_NUMBER>
                                <TEMP_DIR>${project.build.directory}/installer-work</TEMP_DIR>
                            </environmentVariables>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>